headers/private/net/net_protocol.h
@@ -112,7 +112,8 @@ struct net_protocol_module_info {
 					int flags);
 	ssize_t		(*read_data_no_buffer)(net_protocol* self, const iovec* vecs,
 					size_t vecCount, ancillary_data_container** _ancillaryData,
-					struct sockaddr* _address, socklen_t* _addressLength);
+					struct sockaddr* _address, socklen_t* _addressLength,
+					int flags);
 };
 
 
