src/add-ons/kernel/network/protocols/unix/UnixDatagramEndpoint.h
@@ -39,7 +39,7 @@ public:
 			ssize_t				Receive(const iovec* vecs, size_t vecCount,
 									ancillary_data_container** _ancillaryData,
 									struct sockaddr* _address,
-									socklen_t* _addressLength) override;
+									socklen_t* _addressLength, int flags) override;
 
 			ssize_t				Sendable() override;
 			ssize_t				Receivable() override;
