src/add-ons/kernel/network/protocols/unix/UnixEndpoint.h
@@ -59,7 +59,8 @@ public:
 									socklen_t addressLength, int flags) = 0;
 	virtual	ssize_t				Receive(const iovec* vecs, size_t vecCount,
 									ancillary_data_container** _ancillaryData,
-									struct sockaddr* _address, socklen_t* _addressLength) = 0;
+									struct sockaddr* _address, socklen_t* _addressLength,
+									int flags) = 0;
 
 	virtual	ssize_t				Sendable() = 0;
 	virtual	ssize_t				Receivable() = 0;
