src/add-ons/kernel/network/protocols/unix/UnixStreamEndpoint.cpp
@@ -468,16 +468,19 @@ UnixStreamEndpoint::Send(const iovec* vecs, size_t vecCount,
 ssize_t
 UnixStreamEndpoint::Receive(const iovec* vecs, size_t vecCount,
 	ancillary_data_container** _ancillaryData, struct sockaddr* _address,
-	socklen_t* _addressLength)
+	socklen_t* _addressLength, int flags)
 {
 	TRACE("[%" B_PRId32 "] %p->UnixStreamEndpoint::Receive(%p, %ld)\n",
 		find_thread(NULL), this, vecs, vecCount);
 
-	bigtime_t timeout = absolute_timeout(socket->receive.timeout);
-	if (gStackModule->is_restarted_syscall())
-		timeout = gStackModule->restore_syscall_restart_timeout();
-	else
-		gStackModule->store_syscall_restart_timeout(timeout);
+	bigtime_t timeout = 0;
+	if ((flags & MSG_DONTWAIT) == 0) {
+		timeout = absolute_timeout(socket->receive.timeout);
+		if (gStackModule->is_restarted_syscall())
+			timeout = gStackModule->restore_syscall_restart_timeout();
+		else
+			gStackModule->store_syscall_restart_timeout(timeout);
+	}
 
 	UnixStreamEndpointLocker locker(this);
 
