src/add-ons/kernel/network/protocols/unix/unix.cpp
@@ -418,10 +418,10 @@ unix_send_data_no_buffer(net_protocol *_protocol, const iovec *vecs,
 ssize_t
 unix_read_data_no_buffer(net_protocol *_protocol, const iovec *vecs,
 	size_t vecCount, ancillary_data_container **_ancillaryData,
-	struct sockaddr *_address, socklen_t *_addressLength)
+	struct sockaddr *_address, socklen_t *_addressLength, int flags)
 {
 	return ((UnixEndpoint*)_protocol)->Receive(vecs, vecCount, _ancillaryData,
-		_address, _addressLength);
+		_address, _addressLength, flags);
 }
 
 
